<resources>
    <string name="app_name">AirViewKeyboard</string>
    <string name="my_ime">AirView Keyboard</string>

    <string name="settings_name">Settings</string>
    <string name="lettercase">Complete letter disapearance</string>
    <string name="lowercase_on">ON</string>
    <string name="lowercase_off">OFF</string>
    <string name="enlarge_title_key">Key enlargement (out of 1.0)</string>
    <string name="enlargement_default_key">0.2</string>

    <string name="button_S">š</string>
    <string name="button_D">đ</string>
    <string name="button_e">e</string>
    <string name="button_r">r</string>
    <string name="button_t">t</string>
    <string name="button_z">z</string>
    <string name="button_u">u</string>
    <string name="button_i">i</string>
    <string name="button_o">o</string>
    <string name="button_p">p</string>

    <string name="button_a">a</string>
    <string name="button_s">s</string>
    <string name="button_d">d</string>
    <string name="button_f">f</string>
    <string name="button_g">g</string>
    <string name="button_h">h</string>
    <string name="button_j">j</string>
    <string name="button_k">k</string>
    <string name="button_l">l</string>
    <string name="button_C">č</string>

    <string name="button_normal">START</string>
    <string name="button_cc">ć</string>
    <string name="button_c">c</string>
    <string name="button_v">v</string>
    <string name="button_b">b</string>
    <string name="button_n">n</string>
    <string name="button_m">m</string>
    <string name="button_Z">ž</string>
    <string name="button_del">&lt;</string>

    <string name="button_space">______</string>
    <string name="button_enter">ENTER</string>
    <string name="button_settings">SETTINGS</string>



</resources>