<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:id="@+id/rootview">


    <!-- Prvi red slova, faktor 0.25 -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/firstView"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_S"
            android:layout_weight="0.1"
            android:id="@+id/button0" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_D"
            android:layout_weight="0.1"
            android:id="@+id/button1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_e"
            android:layout_weight="0.1"
            android:id="@+id/button2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_r"
            android:layout_weight="0.1"
            android:id="@+id/button3" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_t"
            android:layout_weight="0.1"
            android:id="@+id/button4" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_z"
            android:layout_weight="0.1"
            android:id="@+id/button5" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_u"
            android:layout_weight="0.1"
            android:id="@+id/button6" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_i"
            android:layout_weight="0.1"
            android:id="@+id/button7" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_o"
            android:layout_weight="0.1"
            android:id="@+id/button8" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_p"
            android:layout_weight="0.1"
            android:id="@+id/button9" />

    </LinearLayout>


    <!-- Drugi red slova, faktor 0.25 -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/secondView"
        android:weightSum="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_a"
            android:layout_weight="0.1"
            android:id="@+id/button10" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_s"
            android:layout_weight="0.1"
            android:id="@+id/button11" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_d"
            android:layout_weight="0.1"
            android:id="@+id/button12" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_f"
            android:layout_weight="0.1"
            android:id="@+id/button13" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_g"
            android:layout_weight="0.1"
            android:id="@+id/button14" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_h"
            android:layout_weight="0.1"
            android:id="@+id/button15" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_j"
            android:layout_weight="0.1"
            android:id="@+id/button16" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_k"
            android:layout_weight="0.1"
            android:id="@+id/button17" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_l"
            android:layout_weight="0.1"
            android:id="@+id/button18" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_C"
            android:layout_weight="0.1"
            android:id="@+id/button19" />

    </LinearLayout>


    <!-- Treci red slova, faktor 0.25 -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/thirdView"
        android:weightSum="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_normal"
            android:layout_weight="0.15"
            android:id="@+id/button20" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_cc"
            android:layout_weight="0.1"
            android:id="@+id/button21" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_c"
            android:layout_weight="0.1"
            android:id="@+id/button22" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_v"
            android:layout_weight="0.1"
            android:id="@+id/button23" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_b"
            android:layout_weight="0.1"
            android:id="@+id/button24" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_n"
            android:layout_weight="0.1"
            android:id="@+id/button25" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_m"
            android:layout_weight="0.1"
            android:id="@+id/button26" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_Z"
            android:layout_weight="0.1"
            android:id="@+id/button27" />

        <Button
            android:isRepeatable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_del"
            android:layout_weight="0.15"
            android:id="@+id/button28" />

    </LinearLayout>

    <!-- Cetvrti red, faktor 0.25 -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/fourthView"
        android:weightSum="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_settings"
            android:layout_weight="0.2"
            android:id="@+id/button29" />

        <!--placehoder (prazno mjesto)-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.05"
            android:id="@+id/emptyLeftFourthRow" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_space"
            android:layout_weight="0.5"
            android:id="@+id/button30" />

        <!--placehoder (prazno mjesto)-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.05"
            android:id="@+id/emptyRightFourthRow" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_enter"
            android:layout_weight="0.2"
            android:id="@+id/button31" />

    </LinearLayout>


</LinearLayout>